Added user login test